<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </android.support.v4.view.ViewPager>
        <TextView
            android:id="@+id/txt_hotel_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_name"
            android:layout_below="@id/pager"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="23dp"/>
        <TextView
            android:id="@+id/txt_hotel_address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_address"
            android:layout_below="@id/txt_hotel_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="19dp"/>
        <TextView
            android:id="@+id/txt_hotel_openingtime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_open_now"
            android:layout_below="@id/txt_hotel_address"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/colorGreen"
            android:textSize="19dp"/>
        <TextView
            android:id="@+id/txt_hotel_timing"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_timing"
            android:layout_toRightOf="@id/txt_hotel_openingtime"
            android:layout_below="@id/txt_hotel_address"
            android:layout_marginTop="25dp"
            android:paddingLeft="10dp"
            android:textSize="19dp"/>
        <TextView
            android:id="@+id/txt_hotel_reviews"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_review"
            android:layout_below="@id/txt_hotel_openingtime"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="28dp"
            android:textSize="14dp"/>
        <TextView
            android:id="@+id/txt_hotel_bookmarks"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_beenthere"
            android:layout_below="@id/txt_hotel_openingtime"
            android:layout_toRightOf="@id/txt_hotel_reviews"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:textSize="14dp"/>
        <TextView
            android:id="@+id/txt_hotel_been_there"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_bookmarks"
            android:layout_below="@id/txt_hotel_openingtime"
            android:layout_toRightOf="@id/txt_hotel_bookmarks"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:textSize="14dp"/>
        <TextView
            android:id="@+id/txt_hotel_discount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_discount"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_below="@id/txt_hotel_bookmarks"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:textSize="21dp"/>
        <TextView
            android:id="@+id/txt_hotel_day"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_day"
            android:layout_below="@id/txt_hotel_discount"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="30dp"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/txt_hotel_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_date"
            android:layout_below="@id/txt_hotel_discount"
            android:layout_toRightOf="@id/txt_hotel_day"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/txt_hotel_daysec"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_daysecond"
            android:layout_below="@id/txt_hotel_discount"
            android:layout_toRightOf="@id/txt_hotel_date"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/txt_hotel_datesec"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_datesecond"
            android:layout_below="@id/txt_hotel_discount"
            android:layout_toRightOf="@id/txt_hotel_daysec"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/txt_hotel_discountperc"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_discountperc"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:layout_below="@id/txt_hotel_daysec"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textSize="21dp"/>
        <TextView
            android:id="@+id/txt_hotel_Menu"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_menu"
            android:textColor="#000000"
            android:layout_below="@id/txt_hotel_discountperc"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textSize="21dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/horizontal_recycler_view"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="2dp"
            android:layout_below="@id/txt_hotel_Menu"/>
        <TextView
            android:id="@+id/txt_hotel_Photos"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_photos"
            android:textColor="#000000"
            android:layout_below="@id/horizontal_recycler_view"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textSize="21dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/horizontal_recycler_view_photos"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/txt_hotel_Photos"/>
        <TextView
            android:id="@+id/txt_hotel_completeaddress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_completeaddress"
            android:layout_below="@id/horizontal_recycler_view_photos"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/txt_hotel_map"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hotel_maps"
            android:layout_below="@id/txt_hotel_completeaddress"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="17dp"/>

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/txt_hotel_map"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:src="@mipmap/one"
            android:layout_marginTop="18dp"/>
        <TextView
            android:id="@+id/txt_phone_no"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="966775599"
            android:layout_below="@id/txt_hotel_map"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@id/img_phone"
            android:paddingLeft="10dp"
            android:textSize="17dp"/>

        <!-- MapView in lite mode. Note that it needs to be initialised
programmatically before it can be used. -->
        <com.google.android.gms.maps.MapView
            android:id="@+id/hotel_map_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            map:liteMode="true"
            map:mapType="none"
            android:layout_below="@id/txt_hotel_completeaddress"
            android:layout_toRightOf="@id/txt_hotel_map"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="30dp"/>
        <TextView
            android:id="@+id/add_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_your_review"
            android:layout_below="@id/txt_phone_no"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="10dp"
            android:padding="2dp"
            android:background="#7B68EE"/>
        <TextView
            android:id="@+id/txt_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:layout_below="@id/add_review"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="10dp"
            android:padding="2dp" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/rating_one"
            android:layout_below="@id/txt_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialRatingBar.RatingBar.Small"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/review_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_text"
            android:layout_below="@id/rating_one"
            android:layout_marginLeft="30dp"
            android:textSize="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/book_table"
            android:text="Book A Table Now"
            android:layout_below="@id/review_text"
            android:textColor="#ffffff"
            android:textSize="8dp"
            android:background="#DC143C"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>